# xxd

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE.md  README.md
cmake/: version.cmake  version.hpp.in
src/: CMakeLists.txt  compress.hpp  main.cpp
